Renamed packages and properties from `endpoints` to `service` and migrated JavaScript functions to put them in an app library if needed